--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "flashcard-demo",
+    "name": "react-flashcards",
     "version": "0.1.0",
     "private": true,
     "homepage": "https://flashcard-demo.github.io/",
