--- a/package.json
+++ b/package.json
@@ -1,52 +1,51 @@
 {
-    "name": "react-flashcards",
-    "version": "0.1.0",
-    "private": true,
-    "homepage": "https://flashcard-demo.github.io/",
-    "dependencies": {
-      "@testing-library/jest-dom": "^5.17.0",
-      "@testing-library/react": "^13.4.0",
-      "@testing-library/user-event": "^13.5.0",
-      "axios": "^1.7.2",
-      "codemirror": "^5.65.16",
-      "react": "^18.3.1",
-      "react-codemirror2": "^8.0.0",
-      "react-dom": "^18.3.1",
-      "react-flashcards": "^0.0.7",
-      "react-markdown": "^9.0.1",
-      "react-scripts": "5.0.1",
-      "react-syntax-highlighter": "^15.5.0",
-      "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "predeploy": "npm run build",
-      "deploy": "gh-pages -d build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-      "extends": [
-        "react-app",
-        "react-app/jest"
-      ]
-    },
-    "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
-    },
-    "devDependencies": {
-      "gh-pages": "^6.1.1",
-      "prettier": "^3.2.5"
-    }
+  "name": "react-flashcards",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "https://react-flashcards.github.io/react-flashcards/",
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "codemirror": "^5.65.16",
+    "react": "^18.3.1",
+    "react-codemirror2": "^8.0.0",
+    "react-dom": "^18.3.1",
+    "react-flashcards": "^0.0.7",
+    "react-markdown": "^9.0.1",
+    "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1",
+    "prettier": "^3.2.5"
   }
-  
+}
